force-app/main/default/objects/Headcount_Request__c/Headcount_Request__c.object-meta.xml
<CustomObject>
    <label>Headcount Request</label>
    <nameField>
        <label>Headcount Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Headcount Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>