force-app/main/default/objects/Headcount_Request__c/fields/Days_Before_Hire_Date_to_Post_Job__c.field-meta.xml
<CustomField>
    <fullName>Days_Before_Hire_Date_to_Post_Job__c</fullName>
    <inlineHelpText>If &quot;Other&quot;, please include context in Description field.</inlineHelpText>
    <label>Days Before Hire Date to Post Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>