force-app/main/default/objects/Headcount_Request__c/fields/Desired_Hire_Date__c.field-meta.xml
<CustomField>
    <fullName>Desired_Hire_Date__c</fullName>
    <label>Desired Hire Date</label>
    <type>Date</type>
</CustomField>