force-app/main/default/objects/Headcount_Request__c/fields/Do_you_have_a_written_Job_Description__c.field-meta.xml
<CustomField>
    <fullName>Do_you_have_a_written_Job_Description__c</fullName>
    <label>Do you have a written Job Description?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>