force-app/main/default/objects/Headcount_Request__c/fields/Employee_Email__c.field-meta.xml
<CustomField>
    <fullName>Employee_Email__c</fullName>
    <formula>LOWER(LEFT(First_Name__c, 1) +  Last_Name__c + &quot;@myubiquity.com&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Email</label>
    <type>Text</type>
</CustomField>