force-app/main/default/objects/Headcount_Request__c/fields/Has_this_been_budgeted__c.field-meta.xml
<CustomField>
    <fullName>Has_this_been_budgeted__c</fullName>
    <label>Has this been budgeted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>