force-app/main/default/objects/Headcount_Request__c/fields/Hiring_Deadline__c.field-meta.xml
<CustomField>
    <fullName>Hiring_Deadline__c</fullName>
    <label>Hiring Deadline</label>
    <type>Date</type>
</CustomField>