force-app/main/default/objects/Headcount_Request__c/fields/Salesforce_License_Required__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_License_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Will this new employee require their own Salesforce license?</description>
    <inlineHelpText>Will this new employee require their own Salesforce license? (Shared licenses do not count)</inlineHelpText>
    <label>Salesforce License Required</label>
    <type>Checkbox</type>
</CustomField>