force-app/main/default/objects/Headcount_Request__c/recordTypes/Default_Headcount_Request.recordType-meta.xml
<RecordType>
    <fullName>Default_Headcount_Request</fullName>
    <active>true</active>
    <label>Default Headcount Request</label>
</RecordType>