force-app/main/default/objects/Headcount_Request__c/listViews/People_Culture_Headcount_Request.listView-meta.xml
<ListView>
    <fullName>People_Culture_Headcount_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>People &amp; Culture</label>
    <queue>People_Culture</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>